<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LMixer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_board">Board</string>
    <string name="hengfu">hengfu</string>
    <string name="f1">1</string>
    <string name="F2">2</string>
    <string name="F3">3</string>
    <string name="F4">4</string>
    <string name="F5">5</string>
    <string name="A1">A1</string>
    <string name="A2">A2</string>
    <string name="A3">A3</string>
    <string name="A4">A4</string>
    <string name="A5">A5</string>
    <string name="B1">1</string>
    <string name="B2">B2</string>
    <string name="B3">B3</string>
    <string name="B4">B4</string>
    <string name="B5">B5</string>
    <string name="C1">C1</string>
    <string name="C2">C2</string>
    <string name="C3">C3</string>
    <string name="C4">C4</string>
    <string name="C5">C5</string>
    <string name="M1">M1</string>
    <string name="M2">M2</string>
    <string name="M3">M3</string>
    <string name="text">This is main board. second page</string>

</resources>
