<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="yiyang.yang.lmixer.Board">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:contentDescription="@string/hengfu" />


        <LinearLayout

            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_margin="20dp"
                android:layout_width="100"
                android:layout_height="100"
                android:id="@+id/imageView6"
                android:src="@drawable/face1"
                android:contentDescription="@string/M1" />
            <ImageView
                android:layout_margin="20dp"
                android:layout_width="100"
                android:layout_height="100"
                android:id="@+id/imageView61"
                android:src="@drawable/face5"
                android:contentDescription="@string/M2" />
            <ImageView
                android:layout_margin="20dp"
                android:layout_width="100"
                android:layout_height="100"
                android:id="@+id/imageView62"
                android:src="@drawable/face8"
                android:contentDescription="@string/M3" />

            <TextView
                android:layout_width="200"
                android:layout_height="200"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical" />

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>
